--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,19 @@
-set -ga terminal-overrides ",screen-256color*:Tc"
-set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -g default-terminal 'screen-256color'
 set -s escape-time 0
-
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set -g focus-events on
 set -g status-style 'bg=#333333 fg=#ff3c3c'
+set -g base-index 1
+set -g repeat-time 1000
+set -g history-limit 10000
+set -g mouse on
+
+# Mapping defaults to comfy one :)
+set-option -g prefix C-a
+unbind C-b
+bind-key C-a send-prefix
 
 bind r source-file ~/.tmux.conf
-set -g base-index 1
 
 # Split panes
 unbind H
