--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set-window-option -g mode-keys vi
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-terminal 'screen-256color'
 set -s escape-time 0
@@ -35,6 +36,13 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard' # xclip for linux
+
+bind-key -r i run-shell "tmux neww ~/.scripts/cht.sh"
+bind-key -r G run-shell "~/.scripts/tmux-sessionizer ~/Programming/gobi"
+bind-key -r P run-shell "~/.scripts/tmux-sessionizer ~/Programming/perpro/"
 
 # and now unbind keys
 unbind Up
