--- a/i3/config
+++ b/i3/config
@@ -172,6 +172,10 @@ exec --no-startup-id dex --autostart --environment i3
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
+# background sth idk, enables alacritty the opacity power for some reason
+# will research it later
+exec --no-startup-id picom -f
+
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
