--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 set-window-option -g mode-keys vi
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-terminal 'screen-256color'
-set -s escape-time 0
+set -sg escape-time 0
 set -g focus-events on
 set -g status-style 'bg=#333333 fg=#ff3c3c'
 set -g base-index 1
@@ -25,10 +25,10 @@ bind x split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
 # vim-like pane resizing
-bind -r C-k resize-pane -U
-bind -r C-j resize-pane -D
-bind -r C-h resize-pane -L
-bind -r C-l resize-pane -R
+bind -r C-k resize-pane -U 8
+bind -r C-j resize-pane -D 8
+bind -r C-h resize-pane -L 8
+bind -r C-l resize-pane -R 8
 
 # vim-like pane switching
 bind -r ^ last-window
@@ -41,8 +41,6 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard' # xclip for linux
 
 bind-key -r i run-shell "tmux neww ~/.scripts/cht.sh"
-bind-key -r G run-shell "~/.scripts/tmux-sessionizer ~/Programming/gobi"
-bind-key -r P run-shell "~/.scripts/tmux-sessionizer ~/Programming/perpro/"
 
 # and now unbind keys
 unbind Up
