--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,13 +17,13 @@
 ;==========================================================
 
 [colors]
-background = #282828
-background-alt = #1D2021
-foreground = #EBDBB2
-primary = #D79921
-secondary = #CC241D
-alert = #D65D0E
-disabled = #A89984
+background = #191724
+background-alt = #1f1d2e
+foreground = #e0def4
+primary = #31748f
+secondary = #9ccfd8
+alert = #eb6f92
+disabled = #6e6a86
 
 [bar/bar1]
 monitor = ${env:MONITOR:}
@@ -49,7 +49,7 @@ module-margin = 2
 separator = 
 separator-foreground = ${colors.disabled}
 
-font-0 = Fira Code:size=12
+font-0 = Liberation Mono:size=12
 font-1 = Font Awesome 6 Free:size=12:style=Solid
 
 modules-left = xworkspaces xwindow
