--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,18 @@
 set-window-option -g mode-keys vi
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-option -g default-terminal 'screen-256color'
+set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal 'screen-256color'
 set -sg escape-time 0
 set -g focus-events on
-set -g status-style 'bg=#333333 fg=#ff3c3c'
 set -g base-index 1
 set -g repeat-time 1000
 set -g history-limit 10000
-set -g mouse on
+
+set -g status-position top
+set -g status-style "bg=#1f1d2e fg=#e0def4"
+set -g status-left "#[bg=#1f1d2e fg=#eb6f92] [#S] #[default]"
+set -g status-right "[#{=21:pane_title}]"
+set -g window-status-current-style "bg=#31748f fg=#e0def4"
+set -g window-status-current-format " #I:#W "
 
 # Mapping defaults to comfy one :)
 set-option -g prefix C-a
@@ -38,9 +43,9 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard' # xclip for linux
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy -in -selection clipboard" # xclip for linux
 
-bind-key -r i run-shell "tmux neww ~/.scripts/cht.sh"
+bind-key -r i run-shell "tmux neww ~/config/scripts/cht.sh"
 
 # and now unbind keys
 unbind Up
