--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ set -g history-limit 10000
 set -g status-position top
 set -g status-style "bg=#1f1d2e fg=#e0def4"
 set -g status-left "#[bg=#1f1d2e fg=#eb6f92] [#S] #[default]"
+set -g status-left-length 100
 set -g status-right "[#{=21:pane_title}]"
 set -g window-status-current-style "bg=#31748f fg=#e0def4"
 set -g window-status-current-format " #I:#W "
@@ -30,10 +31,10 @@ bind x split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
 # vim-like pane resizing
-bind -r C-k resize-pane -U 8
-bind -r C-j resize-pane -D 8
-bind -r C-h resize-pane -L 8
-bind -r C-l resize-pane -R 8
+bind -r C-k resize-pane -U 4
+bind -r C-j resize-pane -D 4
+bind -r C-h resize-pane -L 4
+bind -r C-l resize-pane -R 4
 
 # vim-like pane switching
 bind -r ^ last-window
@@ -42,10 +43,12 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+bind -r K kill-pane
+
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy -in -selection clipboard" # xclip for linux
 
-bind-key -r i run-shell "tmux neww ~/config/scripts/cht.sh"
+bind-key -r i run-shell "tmux neww ~/.config/scripts/cht.sh"
 
 # and now unbind keys
 unbind Up
