--- a/.skhdrc
+++ b/.skhdrc
@@ -1,18 +1,23 @@
 # Application shortcuts
-cmd - h: yabai -m window --focus west || yabai -m display --focus west
-cmd - j: yabai -m window --focus south || yabai -m display --focus south
-cmd - k: yabai -m window --focus north || yabai -m display --focus north
-cmd - l: yabai -m window --focus east || yabai -m display --focus east
+cmd - m: yabai -m window --focus west || yabai -m display --focus west
+cmd - n: yabai -m window --focus south || yabai -m display --focus south
+cmd - e: yabai -m window --focus north || yabai -m display --focus north
+cmd - i: yabai -m window --focus east || yabai -m display --focus east
 
-cmd + shift - h : yabai -m window --swap west || $(yabai -m window --display west; yabai -m display --focus west)
-cmd + shift - j : yabai -m window --swap south || $(yabai -m window --display south; yabai -m display --focus south)
-cmd + shift - k : yabai -m window --swap north || $(yabai -m window --display north; yabai -m display --focus north)
-cmd + shift - l : yabai -m window --swap east || $(yabai -m window --display east; yabai -m display --focus east)
+cmd + shift - m : yabai -m window --swap west || $(yabai -m window --display west; yabai -m display --focus west)
+cmd + shift - n : yabai -m window --swap south || $(yabai -m window --display south; yabai -m display --focus south)
+cmd + shift - e : yabai -m window --swap north || $(yabai -m window --display north; yabai -m display --focus north)
+cmd + shift - i : yabai -m window --swap east || $(yabai -m window --display east; yabai -m display --focus east)
+
+ctrl + shift - m : yabai -m window --resize right:-48:0
+ctrl + shift - n : yabai -m window --resize bottom:0:-48
+ctrl + shift - e : yabai -m window --resize bottom:0:48
+ctrl + shift - i : yabai -m window --resize right:48:0
 
 cmd - f : yabai -m space --layout "$(yabai -m query --spaces --space | jq -r 'if .type == "bsp" then "stack" else "bsp" end')"
 
-cmd - p: yabai -m window --focus stack.prev
-cmd - n: yabai -m window --focus stack.next
+cmd - a: yabai -m window --focus stack.prev
+cmd - s: yabai -m window --focus stack.next
 
 # focus the first window that yabai knows about on space 3, if there are any
 cmd - 1: yabai -m query --spaces --space 1; yabai -m space --focus 1
