--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -2,7 +2,7 @@
 # config starts here: #
 #######################
 
-font pango: Liberation Mono 10
+font pango: JetBrainsMono Nerd Font Propo 10
 workspace_layout default
 for_window [class="^.*"] border pixel 4
 default_border pixel 4
@@ -114,89 +114,57 @@ bindsym $mod+Shift+space floating toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
-#############################################
-# Colors                                    #
-#############################################
-
-#class                  border  backgr. text    indicator child_border
-client.focused          #d65d0e #d65d0e #d65d0e #d65d0e   #d65d0e
-client.focused_inactive #bdae93 #bdae93 #6e6a86 #bdae93   #bdae93
-client.unfocused        #bdae93 #bdae93 #6e6a86 #bdae93   #bdae93
-client.urgent           #bdae93 #bdae93 #6e6a86 #bdae93   #bdae93
-
-client.background       #bdae93
-
-#############################################
-# autostart applications/services on login: #
-#############################################
-exec_always --no-startup-id ~/.config/polybar/launch.sh
-exec --no-startup-id picom --config ~/.config/picom.conf
-
-# get auth work with polkit-gnome
-exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-
-# dex execute .desktop files + apps using /etc/xdg/autostart.
-# when second to i3 a DE is installed or mixed usage of i3 + xfce4 or GNOME
-# in this cases better disable dex and use manual starting apps using xdg/autostart
-# if enabled you should comment welcome app.
-# https://github.com/jceb/dex
-# exec --no-startup-id dex -a -s /etc/xdg/autostart/:~/.config/autostart/
-exec --no-startup-id dex --autostart --environment i3
-
-# configure multiple keyboard layouts and hotkey to switch (Alt+CAPSLOCK in this example)
-#exec --no-startup-id setxkbmap -layout 'us,sk' -variant altgr-intl,qwerty -option 'grp:alt_caps_toggle'
-exec xrandr --output HDMI-A-0 --mode 1920x1080 --rate 239.96
-
-# start a script to setup displays
-# uncomment the next line, use arandr to setup displays and save the file as monitor:
-# exec --no-startup-id ~/.screenlayout/monitor.sh
-
-# set wallpaper
-# exec --no-startup-id sleep 2 && nitrogen --restore
-exec --no-startup-id sleep 1 && feh --bg-fill ~/.config/wallpaper/wallpaper.png
-
-# set powersavings for display:
-exec --no-startup-id xset s 480 dpms 600 600 600
-
-# Desktop notifications
-exec --no-startup-id /usr/bin/dunst
-
-# Autostart apps as you like
-exec --no-startup-id sleep 2 && alacritty
-
-##################
-# floating rules #
-##################
-
-# set floating (nontiling) for apps needing it
-for_window [class="Yad" instance="yad"] floating enable
-for_window [class="Galculator" instance="galculator"] floating enable
-
-# set floating (nontiling) for special apps
-for_window [class="Pavucontrol" instance="pavucontrol"] floating enable
-for_window [class="qt5ct" instance="qt5ct"] floating enable
-for_window [window_role="About"] floating enable
-
-################
-# applications #
-################
-
 # Lock
 bindsym $mod+Escape exec i3lock --nofork -i ~/.config/wallpaper/lockscreen.png
-
-# App shortcuts
-bindsym Print exec scrot ~/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/$(date +"%Y-%m-%d-%T")-screenshot.png"
 
 # Pulse Audio Control
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increases volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #increases volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle #increases volume
 
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 # rofi bindings fancy application menu ($mod+d /F9 optional disabled)
 bindsym $mod+space exec rofi -modi drun -show drun -config ~/.config/rofi/config.rasi
+
+#############################################
+# Colors                                    #
+#############################################
+
+#class                  border  backgr. text    indicator child_border
+client.focused          #eb6f92 #eb6f92 #333333 #eb6f92   #eb6f92
+client.focused_inactive #595959 #595959 #333333 #595959   #595959
+client.unfocused        #595959 #595959 #333333 #595959   #595959
+client.urgent           #595959 #595959 #333333 #595959   #595959
+
+client.background       #595959
+
+#############################################
+# autostart applications/services on login: #
+#############################################
+exec xrandr --output HDMI-1 --mode 1920x1080 --rate 239.96 --primary
+
+exec_always --no-startup-id $HOME/.config/polybar/run.sh
+
+exec --no-startup-id picom --config $HOME/.config/picom.conf
+exec --no-startup-id xset s 480 dpms 600 600 600
+exec --no-startup-id /usr/bin/dunst
+
+exec --no-startup-id sleep 1 && feh --bg-fill ~/.config/wallpaper/wallpaper.png
+exec --no-startup-id sleep 2 && alacritty
+
+##################
+# floating rules #
+##################
+
+# set floating (nontiling) for special apps
+for_window [class="Pavucontrol" instance="pavucontrol"] floating enable
+
+################
+# applications #
+################
+
+# App shortcuts
+bindsym Print exec scrot ~/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/$(date +"%Y-%m-%d-%T")-screenshot.png"
