--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -115,7 +115,7 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+a focus parent
 
 # Lock
-bindsym $mod+Escape exec i3lock --nofork -i ~/.config/wallpaper/lockscreen.png
+# bindsym $mod+l exec i3lock --nofork -c #191724
 
 # Pulse Audio Control
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increases volume
@@ -146,13 +146,13 @@ client.background       #595959
 #############################################
 exec xrandr --output HDMI-1 --mode 1920x1080 --rate 239.96 --primary
 
-exec_always --no-startup-id $HOME/.config/polybar/run.sh
+# exec_always --no-startup-id $HOME/.config/polybar/run.sh
 
 exec --no-startup-id picom --config $HOME/.config/picom.conf
 exec --no-startup-id xset s 480 dpms 600 600 600
 exec --no-startup-id /usr/bin/dunst
 
-exec --no-startup-id sleep 1 && feh --bg-fill ~/.config/wallpaper/wallpaper.png
+exec --no-startup-id sleep 1 && feh --bg-fill ~/.wallpapers/default-wallpaper.png
 exec --no-startup-id sleep 2 && alacritty
 
 ##################
