--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -2,13 +2,28 @@
 # config starts here: #
 #######################
 
-font pango: JetBrainsMono Nerd Font Propo 10
+font pango:AnonymicePro Nerd Font Propo 11
 workspace_layout default
-for_window [class="^.*"] border pixel 4
-default_border pixel 4
-default_floating_border normal 4
-gaps inner 6
-gaps outer 6
+# for_window [class="^.*"] border pixel 4
+
+exec --no-startup-id dex --autostart --environment i3
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id nm-applet
+
+# Use pactl to adjust volume in PulseAudio.
+set $refresh_i3status killall -SIGUSR1 i3status
+
+#############################################
+# autostart applications/services on login: #
+#############################################
+exec xrandr --output HDMI-A-0 --mode 1920x1080 --rate 239.96 --primary
+
+exec --no-startup-id picom --config $HOME/.config/picom.conf
+exec --no-startup-id xset s 480 dpms 600 600 600
+exec --no-startup-id /usr/bin/dunst
+
+exec --no-startup-id sleep 1 && feh --bg-fill $HOME/.wallpapers/default-wallpaper.png
+exec --no-startup-id sleep 2 && alacritty
 
 ######################################
 # keybindings for different actions: #
@@ -19,9 +34,52 @@ set $mod Mod4
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# switch/iterate between workspaces
-bindsym $mod+Tab workspace next
-bindsym $mod+Shift+Tab workspace prev
+tiling_drag modifier titlebar
+
+# Volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+
+# change focus between tiling / floating windows
+bindsym $mod+space exec rofi -modi drun -show drun -config ~/.config/rofi/config.rasi
+
+# lock
+bindsym $mod+l exec i3lock --nofork -c 191724
+
+# kill focused window
+bindsym $mod+q kill
+
+bindsym $mod+n focus down
+bindsym $mod+e focus up
+bindsym $mod+m focus left
+bindsym $mod+i focus right
+
+# move focused window
+bindsym $mod+Shift+n move down
+bindsym $mod+Shift+e move up
+bindsym $mod+Shift+m move left
+bindsym $mod+Shift+i move right
+
+# split in horizontal orientation
+bindsym $mod+h split h
+
+# split in vertical orientation
+bindsym $mod+v split v
+
+# enter fullscreen mode for the focused container
+bindsym $mod+f fullscreen toggle
+
+# change container layout (stacked, tabbed, toggle split)
+bindsym $mod+t layout tabbed
+bindsym $mod+s layout toggle split
+
+# focus the parent container
+bindsym $mod+u focus parent
+
+# focus the child container
+bindsym $mod+d focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -37,28 +95,33 @@ set $ws9 "9"
 set $ws10 "10"
 
 # switch to workspace
-bindsym $mod+1    workspace  $ws1
-bindsym $mod+2    workspace  $ws2
-bindsym $mod+3    workspace  $ws3
-bindsym $mod+4    workspace  $ws4
-bindsym $mod+5    workspace  $ws5
-bindsym $mod+6    workspace  $ws6
-bindsym $mod+7    workspace  $ws7
-bindsym $mod+8    workspace  $ws8
-bindsym $mod+9    workspace  $ws9
-bindsym $mod+0    workspace  $ws10
+bindsym $mod+1 workspace number $ws1
+bindsym $mod+2 workspace number $ws2
+bindsym $mod+3 workspace number $ws3
+bindsym $mod+4 workspace number $ws4
+bindsym $mod+5 workspace number $ws5
+bindsym $mod+6 workspace number $ws6
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
+bindsym $mod+9 workspace number $ws9
+bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1    move container to workspace  $ws1
-bindsym $mod+Shift+2    move container to workspace  $ws2
-bindsym $mod+Shift+3    move container to workspace  $ws3
-bindsym $mod+Shift+4    move container to workspace  $ws4
-bindsym $mod+Shift+5    move container to workspace  $ws5
-bindsym $mod+Shift+6    move container to workspace  $ws6
-bindsym $mod+Shift+7    move container to workspace  $ws7
-bindsym $mod+Shift+8    move container to workspace  $ws8
-bindsym $mod+Shift+9    move container to workspace  $ws9
-bindsym $mod+Shift+0    move container to workspace  $ws10
+bindsym $mod+Shift+1 move container to workspace number $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3
+bindsym $mod+Shift+4 move container to workspace number $ws4
+bindsym $mod+Shift+5 move container to workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws10
+
+# reload the configuration file
+bindsym $mod+Shift+c reload
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r restart
 
 # resize window (you can also use the mouse for that):
 mode "resize" {
@@ -74,97 +137,8 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# kill focused window
-bindsym $mod+q kill
-
-# reload the configuration file
-bindsym $mod+Shift+c reload
-
-# restart i3 inplace (preserves your layout/session, can be used to update i3)
-bindsym $mod+Shift+r restart
-
-# change focus
-bindsym $mod+n focus down
-bindsym $mod+e focus up
-bindsym $mod+m focus left
-bindsym $mod+i focus right
-
-# move focused window
-bindsym $mod+Shift+n move down
-bindsym $mod+Shift+e move up
-bindsym $mod+Shift+m move left
-bindsym $mod+Shift+i move right
-
-# split in horizontal orientation
-bindsym $mod+x split h
-
-# split in vertical orientation
-bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+g layout tabbed
-bindsym $mod+s layout toggle split
-
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# Lock
-# bindsym $mod+l exec i3lock --nofork -c #191724
-
-# Pulse Audio Control
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increases volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #increases volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle #increases volume
-
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
-
-# rofi bindings fancy application menu ($mod+d /F9 optional disabled)
-bindsym $mod+space exec rofi -modi drun -show drun -config ~/.config/rofi/config.rasi
-
-#############################################
-# Colors                                    #
-#############################################
-
-#class                  border  backgr. text    indicator child_border
-client.focused          #eb6f92 #eb6f92 #333333 #eb6f92   #eb6f92
-client.focused_inactive #595959 #595959 #333333 #595959   #595959
-client.unfocused        #595959 #595959 #333333 #595959   #595959
-client.urgent           #595959 #595959 #333333 #595959   #595959
-
-client.background       #595959
-
-#############################################
-# autostart applications/services on login: #
-#############################################
-exec xrandr --output HDMI-1 --mode 1920x1080 --rate 239.96 --primary
-
-# exec_always --no-startup-id $HOME/.config/polybar/run.sh
-
-exec --no-startup-id picom --config $HOME/.config/picom.conf
-exec --no-startup-id xset s 480 dpms 600 600 600
-exec --no-startup-id /usr/bin/dunst
-
-exec --no-startup-id sleep 1 && feh --bg-fill ~/.wallpapers/default-wallpaper.png
-exec --no-startup-id sleep 2 && alacritty
-
-##################
-# floating rules #
-##################
-
-# set floating (nontiling) for special apps
-for_window [class="Pavucontrol" instance="pavucontrol"] floating enable
-
-################
-# applications #
-################
-
-# App shortcuts
-bindsym Print exec scrot ~/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/$(date +"%Y-%m-%d-%T")-screenshot.png"
+# Start i3bar to display a workspace bar (plus the system information i3status
+# finds out, if available)
+bar {
+        status_command i3status
+}
