--- a/i3/.config/picom.conf
+++ b/i3/.config/picom.conf
@@ -68,17 +68,17 @@ rounded-corners-exclude = [
 #################################
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-method = "dual_kawase";
-blur-size = 3
-blur-deviation = true
-blur-strength = 4
-blur-background = true
-
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+# blur-method = "dual_kawase";
+# blur-size = 1
+# blur-deviation = true
+# blur-strength = 1
+# blur-background = true
+#
+# blur-background-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'",
+#   "_GTK_FRAME_EXTENTS@:c"
+# ];
 
 #################################
 #       General Settings        #
