--- a/alacritty/.config/alacritty.toml
+++ b/alacritty/.config/alacritty.toml
@@ -1,3 +1,5 @@
+live_config_reload = true
+
 [colors]
 draw_bold_text_with_bright_colors = true
 
@@ -15,6 +17,10 @@ opacity = 0.9
 general = "Alacritty"
 instance = "Alacritty"
 
+[window.padding]
+x = 2
+y = 2
+
 [scrolling]
 history = 5000
 
@@ -22,23 +28,23 @@ history = 5000
 save_to_clipboard = true
 
 [font]
-size = 11
-
-[font.bold]
-family = "AnonymicePro Nerd Font Mono"
-style = "Bold"
-
-[font.bold_italic]
-family = "AnonymicePro Nerd Font Mono"
-style = "Bold Italic"
-
-[font.italic]
-family = "AnonymicePro Nerd Font Mono"
-style = "Italic"
+size = 9
 
 [font.normal]
-family = "AnonymicePro Nerd Font Mono"
+family = "BlexMono Nerd Font Mono"
 style = "Regular"
+
+[font.bold]
+family = "BlexMono Nerd Font Mono"
+style = "Bold"
+
+[font.italic]
+family = "BlexMono Nerd Font Mono"
+style = "Italic"
+
+[font.bold_italic]
+family = "BlexMono Nerd Font Mono"
+style = "Bold Italic"
 
 [[keyboard.bindings]]
 action = "IncreaseFontSize"
