--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -2,7 +2,7 @@
 # config starts here: #
 #######################
 
-font pango:AnonymicePro Nerd Font Propo 11
+font pango:BlexMono Nerd Font Propo 9
 workspace_layout default
 # for_window [class="^.*"] border pixel 4
 
