--- a/alacritty/.config/alacritty.toml
+++ b/alacritty/.config/alacritty.toml
@@ -32,7 +32,7 @@ size = 9
 
 [font.normal]
 family = "BlexMono Nerd Font Mono"
-style = "Regular"
+style = "Medium"
 
 [font.bold]
 family = "BlexMono Nerd Font Mono"
