added timed lock

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -6,8 +6,8 @@ font pango:BlexMono Nerd Font Propo 9
 workspace_layout default
 # for_window [class="^.*"] border pixel 4
 
+exec xautolock -time 3 -locker "i3lock --nofork -c 191724"
 exec --no-startup-id dex --autostart --environment i3
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
@@ -19,7 +19,6 @@ set $refresh_i3status killall -SIGUSR1 i3status
 exec xrandr --output HDMI-A-0 --mode 1920x1080 --rate 239.96 --primary
 
 exec --no-startup-id picom --config $HOME/.config/picom.conf
-exec --no-startup-id xset s 480 dpms 600 600 600
 exec --no-startup-id /usr/bin/dunst
 
 exec --no-startup-id sleep 1 && feh --bg-fill $HOME/.wallpapers/default-wallpaper.png
