brightness is fixed

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -35,8 +35,8 @@ floating_modifier $mod
 
 tiling_drag modifier titlebar
 # Brightness
-bindsym XF86MonBrightnessUp   exec xbacklight -inc 2
-bindsym XF86MonBrightnessDown exec xbacklight -dec 2
+bindsym XF86MonBrightnessUp   exec --no-startup-id brightnessctl set 10%+
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
 
 # Volume
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
