chore: leaning towards gruvbox lmao

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,11 +8,11 @@ set -g repeat-time 1000
 set -g history-limit 10000
 
 set -g status-position top
-set -g status-style "bg=#1f1d2e fg=#e0def4 bold"
-set -g status-left "#[bg=#1f1d2e fg=#eb6f92] [#S] #[default]"
+set -g status-style "bg=#32302f fg=#fbf1c7 bold"
+set -g status-left "#[bg=#32302f fg=#fe8019] [#S] #[default]"
 set -g status-left-length 100
 set -g status-right "[#{=21:pane_title}]"
-set -g window-status-current-style "bg=#eb6f92 fg=#333334"
+set -g window-status-current-style "bg=#fe8019 fg=#282828"
 set -g window-status-current-format " #I:#W "
 
 # Mapping defaults to comfy one :)
