--- a/alacritty/.config/alacritty.toml
+++ b/alacritty/.config/alacritty.toml
@@ -5,6 +5,7 @@ draw_bold_text_with_bright_colors = true
 
 [cursor]
 style = "Block"
+vi_mode_style = "Block"
 
 [env]
 TERM = "xterm-256color"
@@ -45,6 +46,17 @@ style = "Italic"
 [font.bold_italic]
 family = "BlexMono Nerd Font Mono"
 style = "Bold Italic"
+
+[font.offset]
+x = 0
+y = 0
+
+[font.glyph_offset]
+x = 0
+y = 0
+
+[mouse]
+hide_when_typing = true
 
 [[keyboard.bindings]]
 action = "IncreaseFontSize"
