chore: removed wayland, added tmux theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,13 +7,17 @@ set -g base-index 1
 set -g repeat-time 1000
 set -g history-limit 10000
 
-set -g status-position top
-set -g status-style "bg=#32302f fg=#fbf1c7 bold"
-set -g status-left "#[bg=#32302f fg=#fe8019] [#S] #[default]"
-set -g status-left-length 100
-set -g status-right "[#{=21:pane_title}]"
-set -g window-status-current-style "bg=#fe8019 fg=#282828"
-set -g window-status-current-format " #I:#W "
+set -g status-position bottom
+
+unbind Up
+unbind Down
+unbind Left
+unbind Right
+
+unbind C-Up
+unbind C-Down
+unbind C-Left
+unbind C-Right
 
 # Mapping defaults to comfy one :)
 set-option -g prefix C-a
@@ -48,15 +52,34 @@ bind -r K kill-pane
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy -in -selection clipboard" # xclip for linux
 
+# {Prefix} + h to open help from cht.sh
 bind-key -r h run-shell "tmux neww cht"
 
-# and now unbind keys
-unbind Up
-unbind Down
-unbind Left
-unbind Right
+# {Prefix} + I to install all the plugins
+# {Prefix} + U to update it
+# {Prefix} + Meta + U to remove/uninstall
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
-unbind C-Up
-unbind C-Down
-unbind C-Left
-unbind C-Right
+set -g @plugin 'rose-pine/tmux'
+set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
+set -g @rose_pine_host 'on'
+set -g @rose_pine_window_tabs_enabled 'off'
+set -g @rose_pine_default_window_behavior 'off'
+set -g @rose_pine_disable_active_window_menu 'on'
+set -g @rose_pine_show_current_program 'off'
+set -g @rose_pine_bar_bg_disable 'off'
+
+set -g @rose_pine_date_time "%H:%M"
+set -g @rose_pine_current_window_icon '󰣘'
+set -g @rose_pine_date_time_icon '󱑁'
+set -g @rose_pine_hostname_icon '󰒋'
+set -g @rose_pine_window_status_separator "  "
+set -g @rose_pine_left_separator '  '
+set -g @rose_pine_right_separator '  '
+set -g @rose_pine_field_separator '  '
+set -g @rose_pine_window_separator '.'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
