chore: theme changes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,7 +7,7 @@ set -g base-index 1
 set -g repeat-time 1000
 set -g history-limit 10000
 
-set -g status-position bottom
+set -g status-position top
 
 unbind Up
 unbind Down
@@ -77,7 +77,7 @@ set -g @rose_pine_date_time_icon '󱑁'
 set -g @rose_pine_hostname_icon '󰒋'
 set -g @rose_pine_window_status_separator "  "
 set -g @rose_pine_left_separator '  '
-set -g @rose_pine_right_separator '  '
+set -g @rose_pine_right_separator '  '
 set -g @rose_pine_field_separator '  '
 set -g @rose_pine_window_separator '.'
 
