--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,10 +35,10 @@ bind x split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
 # vim-like pane resizing
-bind -r C-e resize-pane -U 4
-bind -r C-n resize-pane -D 4
-bind -r C-m resize-pane -L 4
-bind -r C-i resize-pane -R 4
+bind -r C-Up resize-pane -U 4
+bind -r C-Down resize-pane -D 4
+bind -r C-Left resize-pane -L 4
+bind -r C-Right resize-pane -R 4
 
 # vim-like pane switching
 bind -r ^ last-window
