--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -145,8 +145,59 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+#################
+# Color scheme: #
+#################
+# set primary Rosé Pine colorscheme colors
+set $base           #191724
+set $surface        #1f1d2e
+set $overlay        #26233a
+set $muted          #6e6a86
+set $subtle         #908caa
+set $text           #e0def4
+set $love           #eb6f92
+set $gold           #f6c177
+set $rose           #ebbcba
+set $pine           #31748f
+set $foam           #9ccfd8
+set $iris           #c4a7e7
+set $highlightlow   #21202e
+set $highlightmed   #403d52
+set $highlighthigh  #524f67
+
+# Teming border and Windows --------------
+# target                 title     bg    text   indicator  border
+client.focused           $rose     $base $text  $rose      $rose
+client.focused_inactive  $text     $base $text  $subtle    $surface
+client.unfocused         $text     $base $text  $overlay   $overlay
+client.urgent            $text     $base $text  $love      $love
+client.placeholder       $base     $base $text  $overlay   $overlay
+client.background        $base
+
 bar {
-        status_command i3status
+    status_command i3status -c /etc/i3status.conf
+    colors {
+        background $base
+
+        #target            border    bg       text
+        focused_workspace  $rose     $base    $text
+        active_workspace   $surface  $base    $text
+        inactive_workspace $overlay  $base    $text
+        urgent_workspace   $love     $base    $text
+    }
 }
+
+# bar {
+#     status_command i3status -c /etc/i3status.conf
+#     colors {
+#         background $base
+#         statusline  #that neon blue
+#         separator #666666
+#
+#         focused_workspace  $rose $base $text
+#         active_workspace   #333333 #5f676a #ffffff
+#         inactive_workspace #333333 #222222 #888888
+#         urgent_workspace   #2f343a #900000 #ffffff
+#     }
+# }
+
