chore: kitty updated

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -19,14 +19,14 @@ repaint_delay         10
 text_composition_strategy legacy
 
 # Misc
-map ctrl+equal      increase_font_size
-map ctrl+minus      decrease_font_size
+map ctrl+equal      change_font_size all +0.5
+map ctrl+minus      change_font_size all -0.5
 map ctrl+backspace  restore_font_size
 
 # Rose pine theme
 foreground               #e0def4
 background               #000000
-background_opacity       0.80
+background_opacity       0.90
 selection_foreground     #e0def4
 selection_background     #403d52
 
