--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -30,10 +30,10 @@ ethernet eth0 {
 battery 0 {
     format = "%status:%percentage %remaining %emptytime"
     format_down = "No battery"
-    status_chr = "[CHR]"
-    status_bat = "[BAT]"
-    status_unk = "[UNK]"
-    status_full = "[FUL]"
+    status_chr = "[CHARGING]"
+    status_bat = "[BATTERY]"
+    status_unk = "[UNKNOWN]"
+    status_full = "[FULL]"
     path = "/sys/class/power_supply/BAT%d/uevent"
     low_threshold = 10
 }
@@ -43,9 +43,9 @@ cpu_temperature 0 {
 }
 
 memory {
-    format = "[MEMUSED]:%used"
+    format = "[MEM-USED]:%used"
     threshold_degraded = "20%"
-    format_degraded = "[MEMFREE]:%free"
+    format_degraded = "[MEM-FREE]:%free"
 }
 
 disk "/" {
