--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,16 +34,18 @@ unbind H
 unbind v
 unbind '"'
 unbind %
+unbind o
+unbind p
 bind x split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
-# vim-like pane resizing
+# vim like pane resizing
 bind -r C-Up resize-pane -U 4
 bind -r C-Down resize-pane -D 4
 bind -r C-Left resize-pane -L 4
 bind -r C-Right resize-pane -R 4
 
-# vim-like pane switching
+# vim like pane switching
 bind -r ^ last-window
 bind -r e select-pane -U
 bind -r n select-pane -D
