update(config): fuck alacritty, wezterm right now and fuck java also

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,5 +7,8 @@
 [pull]
     ff = only
 [user]
-    email = altanbagana@protonmail.com
-    name = altanbgn
+    email = altanbagana@ailab.mn
+    name = altanbgn.ailab
+[alias]
+    lg = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(auto)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)'
+
