--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -24,7 +24,7 @@ exec --no-startup-id picom --config $HOME/.config/picom.conf
 exec --no-startup-id /usr/bin/dunst
 
 exec --no-startup-id sleep 1 && feh --bg-fill $HOME/.wallpapers/default-wallpaper.*
-exec --no-startup-id sleep 2 && alacritty
+exec --no-startup-id sleep 2 && wezterm
 
 ######################################
 # keybindings for different actions: #
