--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,13 +29,15 @@ bind-key C-a send-prefix
 
 bind r source-file ~/.tmux.conf
 
-# Split panes
 unbind H
 unbind v
 unbind '"'
 unbind %
 unbind o
 unbind p
+unbind n
+
+# Split panes
 bind x split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
